# helmitex_warehouse

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SERVER_SETUP_CHECK.md  __main__.py  alembic.ini  apply_migration_fix.sql  config.py  convert_timestamps_to_timestamptz.sql  create_alembic_version.sql  create_default_warehouse.sql  deploy.sh  docker-compose.yml  exceptions.py  fix_alembic_version.sql  fix_remaining_timestamps.sql  main.py  make_admin.sql  migrate_structure.py  migration_20251110_manual.sql  pyproject.toml  pytest.ini  requirements.txt  seed_test_data.sql  start.sh  utils.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20250127_initial_migration.py  20250204_add_production_logic.py  20251110_2230_5c2cb98cb787_add_approval_status_to_users.py  20251110_add_missing_columns.py  20251111_add_category_table.py
app/: __init__.py  __main__.py  bot.py  config.py  handlers.py  main.py  services.py
app/database/: __init__.py  connection.py  db.py  init.py  models.py
app/handlers/: __init__.py  _original_handlers.py  admin.py  admin_handlers.py  admin_users.py  admin_warehouse.py  arrival.py  arrival_handlers.py  categories.py  history.py  history_handlers.py  init.py  main_handlers.py  packing.py  packing_handlers.py  production.py  production_handlers.py  recipe_admin_handlers.py  shipment.py  shipment_handlers.py  sku_admin_handlers.py  start_handler.py  stock.py  stock_handlers.py
helmitex_warehouse/: __init__.py  __main__.py  bot.py  config.py  logger.py
scripts/: seed_categories.py
(+33 files in other folders)
